# unidict

./: .gitattributes  .gitignore  .workspace.yaml  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_NEW.txt  CONTRIBUTING.md  CORE_ANALYSIS_INDEX.md  FINAL_COMPLETION_REPORT.md  FINAL_PROGRESS_REPORT.md  GO_ZERO_SERVICES_STRUCTURE.md  LICENSE  MDICT_ENCRYPTION_RESEARCH.md  MIGRATION_PLAN.md  MOBILE_ADAPTATION_REPORT.md  MONOREPO_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PROJECT_STATUS_REPORT.md  README.md  README_NEW.md  RELEASE_SUMMARY.md  RESTRUCTURE_REPORT.md  SERVICE_DECOMPOSITION.md  architecture_diagram.txt  benchmark.sh  benchmark_results.csv  core_analysis.md  core_quick_reference.md  go.mod  memory_results.csv  package.json  test_tts.sh  todo.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml
adapters/qt/: CMakeLists.txt  ai_service_qt.cpp  ai_service_qt.h  clipboard_qt.cpp  clipboard_qt.h  data_store_qt.cpp  data_store_qt.h  fulltext_manager_qt.cpp  fulltext_manager_qt.h  json_parser_qt.cpp  json_parser_qt.h  mdict_parser_qt.cpp  mdict_parser_qt.h  plugin_manager_qt.h  settings_qt.cpp  settings_qt.h  stardict_parser_qt.cpp  stardict_parser_qt.h  sync_service_qt.cpp  sync_service_qt.h
apps/desktop/: CMakeLists.txt  Main.qml  learning_manager.cpp  lookup_adapter.cpp  lookup_adapter.h  main.cpp  mobile_utils.h  resources.qrc
apps/desktop/mobile/android/: AndroidManifest.xml
apps/desktop/mobile/android/res/values/: styles.xml
apps/desktop/mobile/ios/: Info.plist
cli/: CMakeLists.txt  main.cpp
cli-std/: CMakeLists.txt  main.cpp
cmake/: BuildOptions.cmake  MSVC_Options.cmake  UnidictConfig.cmake.in  config.h.in
core/: CMakeLists.txt  data_store.cpp  data_store.h  index_engine.cpp  index_engine.h  json_parser.h  lookup_service.cpp  mdict_parser.cpp  mdict_parser.h  path_utils.cpp  path_utils.h  plugin_manager.cpp  stardict_parser.cpp  stardict_parser.h  types.h  unidict_core.cpp  unidict_core.h
core/std/: aggregate_lookup_std.cpp  aggregate_lookup_std.h  cross_reference_std.cpp  cross_reference_std.h  csv_parser_std.cpp  csv_parser_std.h  data_store_std.cpp  data_store_std.h  dictionary_manager_std.cpp  dictionary_manager_std.h  dsl_parser_std.cpp  dsl_parser_std.h  fulltext_index_std.cpp  fulltext_index_std.h  html_renderer_std.cpp  html_renderer_std.h  index_engine_std.cpp  index_engine_std.h  json_parser_std.cpp  mdd_resource_std.cpp  mdd_resource_std.h  mdict_decryptor_std.cpp  mdict_decryptor_std.h  mdict_parser_std.cpp  mdict_parser_std.h  memory_optimizer_std.h  path_utils_std.cpp  path_utils_std.h  stardict_parser_std.h
deployments/docker/: docker-compose.dev.yml
docs/: USER_GUIDE.md  dev.md  fulltext_index.md  pro_dictionary_gap.md  roadmap.md
examples/: dict.json  simple.json  test.csv  test.dsl  test.tsv  test_dict.json
gui/: CMakeLists.txt  main.cpp
qmlui/: CMakeLists.txt  Main.qml  MainDesktop.qml  MainModern.qml  clipboard_monitor.cpp  clipboard_monitor.h  global_hotkeys.cpp  global_hotkeys.h  learning_manager.h  lookup_adapter.cpp  lookup_adapter.h  main.cpp  mobile_utils.cpp  resources.qrc
qmlui/components/: EntryResultsPane.qml  SidebarPanel.qml
qmlui/mobile/common/: DefinitionContent.qml  MobileFileDialog.qml  ResponsiveLayout.qml
qmlui/modern/: DEPLOYMENT.md  ModernBridge.qml  ModernPerformance.qml  README.md  Theme.qml
qmlui/modern/components/: ModernAnimations.qml  ModernButton.qml  ModernCard.qml  ModernHistoryPage.qml  ModernLearningPage.qml  ModernNavigationItem.qml  ModernNotificationManager.qml  ModernSearchBox.qml  ModernSearchResultsPage.qml  ModernSettingsPage.qml  ModernToast.qml  ModernVocabularyPage.qml  ModernVoicePage.qml
scripts/: build_packages.py  manage.sh  setup.sh
tests/: CMakeLists.txt  aggregate_lookup_std_test.cpp  cache_prune_std_test.cpp  cli_std_mdict_password_test.cpp  core_lookup_tests.cpp  cross_reference_std_test.cpp  data_store_std_csv_escape_test.cpp  data_store_std_remove_test.cpp  data_store_std_test.cpp  data_store_test.cpp  dictionary_manager_std_meta_std_test.cpp  dictionary_manager_std_remove_test.cpp  dictionary_manager_std_test.cpp  dsl_parser_std_test.cpp  fulltext_index_std_test.cpp  fulltext_lazy_decode_stats_std_test.cpp  fulltext_parallel_build_std_test.cpp  fulltext_persistence_mismatch_std_test.cpp  fulltext_persistence_pathchange_std_test.cpp  fulltext_persistence_stardict_companion_change_std_test.cpp  fulltext_persistence_std_test.cpp  fulltext_std_test.cpp  fulltext_tie_break_std_test.cpp  fulltext_udft12_load_std_test.cpp  fulltext_udft3_format_std_test.cpp  html_renderer_std_test.cpp  index_engine_std_edge_test.cpp  index_engine_std_ops_test.cpp  index_engine_std_test.cpp  index_engine_test.cpp  index_persistence_std_test.cpp  json_parser_std_edge_test.cpp  json_parser_std_test.cpp  lookup_adapter_test.cpp  lookup_service_test.cpp  mdd_resource_std_test.cpp  mdict_encrypted_header_std_test.cpp  mdict_invalid_kidx_oob_std_test.cpp  mdict_kbix_count_mismatch_std_test.cpp  mdict_kbix_multi_std_test.cpp  (+21 more)
tools/: performance_monitor_std.cpp  performance_monitor_std.h
tools/cli/: main.cpp
